welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:6: error: ')' expected but integer literal found.
  if (n>=1 & <=10){
               ^in1To10:10: error: illegal start of simple expression
} 
^